# TCPSocketClient

./: .gitignore  CMakeLists.txt  README.md  TCPSocket.pc.in
example/: CMakeLists.txt  client.test.cpp
include/TCPSocket/: TCPClient.hpp  TCPUtils.hpp
src/: TCPClient.cpp  TCPUtils.cpp
